--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "animate.css": "^4.1.1",
-    "gsap": "^3.10.4",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "react-transition-group": "^4.4.2",
-    "react-tsparticles": "^2.0.6",
-    "tsparticles": "^2.0.6",
-    "web-vitals": "^2.1.4"
+    "gsap": "^3.11.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.2",
+    "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
+    "react-tsparticles": "^2.7.1",
+    "tsparticles": "^2.7.1",
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,10 +43,10 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.2",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.13",
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
     "react-snap": "^1.23.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.2.4"
   }
 }
